After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759771 - GdkSeat: Missing G_BEGIN_DECLS and G_END_DECLS
GdkSeat: Missing G_BEGIN_DECLS and G_END_DECLS
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GdkDevice
3.19.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
Carlos Garnacho
Depends on:
Blocks:
 
 
Reported: 2015-12-22 08:37 UTC by Kjell Ahlstedt
Modified: 2015-12-22 10:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch: GdkSeat: Add G_BEGIN_DECLS and G_END_DECLS (983 bytes, patch)
2015-12-22 08:43 UTC, Kjell Ahlstedt
committed Details | Review

Description Kjell Ahlstedt 2015-12-22 08:37:59 UTC
The new header file gdkseat.h has no G_BEGIN_DECLS and G_END_DECLS.
That's problematic when it's included in C++ code.

An unrelated comment:
The description of @owner_events in gdk_seat_grab() has been copied verbatim
from gdk_device_grab(). It mentions @event_mask, but gdk_seat_grab() has no
such parameter. It has @event.
I guess that more than just the parameter name should be changed in that
description.
Comment 1 Kjell Ahlstedt 2015-12-22 08:43:16 UTC
Created attachment 317774 [details] [review]
patch: GdkSeat: Add G_BEGIN_DECLS and G_END_DECLS
Comment 2 Emmanuele Bassi (:ebassi) 2015-12-22 08:58:19 UTC
Review of attachment 317774 [details] [review]:

Okay.
Comment 3 Kjell Ahlstedt 2015-12-22 10:00:47 UTC
Review of attachment 317774 [details] [review]:

I've committed the patch.