GdkSeat: Add G_BEGIN_DECLS and G_END_DECLS

https://bugzilla.gnome.org/show_bug.cgi?id=759771