gdk/gdkseat.h
@@ -29,6 +29,8 @@
 #include <gdk/gdkevents.h>
 #include <gdk/gdktypes.h>
 
+G_BEGIN_DECLS
+
 #define GDK_TYPE_SEAT  (gdk_seat_get_type ())
 #define GDK_SEAT(o)    (G_TYPE_CHECK_INSTANCE_CAST ((o), GDK_TYPE_SEAT, GdkSeat))
 #define GDK_IS_SEAT(o) (G_TYPE_CHECK_INSTANCE_TYPE ((o), GDK_TYPE_SEAT))
@@ -109,5 +111,7 @@ GDK_AVAILABLE_IN_3_20
 GdkDevice *    gdk_seat_get_pointer      (GdkSeat             *seat);
 GDK_AVAILABLE_IN_3_20
 GdkDevice *    gdk_seat_get_keyboard     (GdkSeat             *seat);
+
+G_END_DECLS
 
 #endif /* __GDK_SEAT_H__ */
